sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:10: error: '(' expected but identifier found.
      if plusPetit(i,i+ecart){
         ^AlgCombSort:15: error: illegal start of simple expression
    }
    ^