sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  ecart=getNombreValeurs()-1 
  var c:Int =1
  while (ecart>1 && c==1){
    var c:Int =0
    ecart= ecart/ 1.3
    i=0
    while (i+ecart<getNombreValeur()){
      if plusPetit(i,i+ecart){
        echange(i,i+ecart)
        i+=1
        c=1
      }
    }
  }
}

